--- a/public/display.html
+++ b/public/display.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<title>Visualizar Video</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>	
+		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 	</head>
 
@@ -30,8 +30,9 @@
 
 
 		<script type="text/javascript">
+		(function(){
 
-			var img = document.getElementById("frame");	
+			var img = document.getElementById("frame");
 			var logger = document.getElementById('logger');
 
 		    /* SOCKET.IO */
@@ -55,9 +56,10 @@
 
 			function log(message) {
 		       logger.innerHTML = logger.innerHTML + message + "<br/>";
-		    };
-			
-		</script>	
+		    };			
+
+		})();
+		</script>
 
 	</body>
 </html>
