--- a/public/emit.html
+++ b/public/emit.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<title>Emitir Video</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+		<script src="//code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 	</head>
 
@@ -22,69 +22,72 @@
 		        </h3>
 		    </div>
 		    <div data-role="content">
-				<video id = "video" autoplay="true" style="width: 680px; heigth: 320px;"></video>
-				<div id = "logger"></div>
+				<video id="video" autoplay="true" style="width: 680px; heigth: 320px;"></video>
+				<div id="logger" ></div>
 		    </div>
 		</div>
 
 
 		<script type="text/javascript">
+		(function(){
 
-		    var video = document.getElementById('video');
-		    var logger = document.getElementById('logger');
-		    var canvas = document.createElement('canvas');
-		    var context = canvas.getContext('2d');
-		    context.width = 120;
-		    context.height = 120;
+			var video = document.getElementById('video');
+			var logger = document.getElementById('logger');
+			var canvas = document.createElement('canvas');
+			var context = canvas.getContext('2d');
+			context.width = 120;
+			context.height = 120;
 
+			navigator.getUserMedia = ( navigator.getUserMedia ||
+														navigator.webkitGetUserMedia ||
+														navigator.mozGetUserMedia ||
+														navigator.msGetUserMedia);
 
-			function log(message) {
-		       logger.innerHTML = logger.innerHTML + message + "<br/>";
-		    };
+			if(navigator.getUserMedia) {
 
+				function successCallback( stream ) {
+					console.log('Broadcasting...');
+					var video = document.querySelector('video');
+					video.src = window.URL.createObjectURL(stream)
+				}
 
-		    if(navigator.getUserMedia) {
-		        navigator.getUserMedia('video', successCallback, errorCallback);
+				function errorCallback( error ) {
+					console.log('Error broadcasting: ' + error.code );
+				}
 
-		        function successCallback( stream ) {
-		        	log('Broadcasting...');
-		            video.src = stream;
-		        };
+					navigator.getUserMedia({video: true,audio: true}, successCallback, errorCallback);
 
-		        function errorCallback( error ) {
-		            log('Error broadcasting: ' + error.code );
-		        };
-		    } else {
-		        log('Cannot access to the camera');
-		    };
-
-
-		    /* SOCKET.IO */
-
-		    var socket = io.connect(window.document.location.host);
+			} else {
+				console.log('Cannot access to the camera');
+			};
 
 
-		    socket.on('connect', function () {
-		    	log('connected');
-		    });
+			/* SOCKET.IO */
 
-		    socket.on('disconnect', function () {
-		    	log('disconnected');
-		    });
+			var socket = io();
+			
+			socket.on('connect', function () {
+				console.log('connected');
+			});
 
-		    function emit(message) {
-		    	socket.emit('data', message);
-		    }
+			socket.on('disconnect', function () {
+				console.log('disconnected');
+			});
 
-		    /* END SOCKET.IO */
+			function emit(message) {
+				socket.emit('data', message);
+			}
 
-		    function sendFrame(video, context) {
-		        context.drawImage(video, 0, 0, context.width, context.height);
-		        emit(canvas.toDataURL('image/webp'));
-		    }
+			/* END SOCKET.IO */
 
-		    setInterval(function() { sendFrame(video, context); }, 1000);
+			function sendFrame(video, context) {
+					context.drawImage(video, 0, 0, context.width, context.height);
+					emit(canvas.toDataURL('image/webp'));
+			}
 
+			//setInterval(function() { sendFrame(video, context); }, 1000);
+
+		})();
 		</script>
 
 	</body>
